update github page

--- a/index.html
+++ b/index.html
@@ -6,13 +6,59 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/jdialog.min.css">
+    <link rel="stylesheet" href="site/rainbow-customer.min.css">
     <link rel="stylesheet" href="site/style.css">
     <title>JDialog</title>
 </head>
 <body>
 
+<a href="https://github.com/lancebiu/animation" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+
 <div class="container">
-    <button class="button" data-toggle="JDialog" data-target="dialog-1">Click Me</button>
+
+    <h1>JDialog</h1>
+
+    <p>
+        jDialog is a jQuery plugin for modal dialog. By using this plugin, You
+        can create interesting dialogs easily. It works in all modern browsers.
+        Tested with jQuery 2.2+, file size is under 1KB, MIT Licensed.
+    </p>
+
+    <h2>Demo</h2>
+
+    <button class="button" data-toggle="JDialog" data-target="dialog-1">fade in</button>
+    <button class="button" data-toggle="JDialog" data-target="dialog-2">sticky up</button>
+    <button class="button" data-toggle="JDialog" data-target="dialog-3">slide in</button>
+    <button class="button" data-toggle="JDialog" data-target="dialog-4">flip</button>
+
+    <h2>Usage</h2>
+
+    <p>First include the plugin file</p>
+
+    <pre><code data-language="html">&lt;link rel="stylesheet" href="path/to/jdialog.min.css"&gt;
+&lt;script src="path/to/jdialog.min.js"&gt;&lt;script&gt;</code></pre>
+
+    <p>Then, define a dialog and a button to trigger it</p>
+    <pre><code data-language="html">&lt;button data-toggle="JDialog" data-target="dialog"&gt;CLICK ME&lt;/button&gt;
+
+&lt;div class="jDialog" id="dialog"&gt;
+    // your dialog code here
+
+&lt;/div&gt;
+    </code></pre>
+
+    <p>Finally, init your dialog.</p>
+
+    <pre><code data-language="javascript">$("#dialog").jDialog({
+    skinClassName: 'demo',        // add your custom class to the dialog
+    allowOverlay: true            // whether to show overlay, default true
+    animationType: 'fade-in',     // select how to animate the dialog
+                                  // try 'fade-in', 'sticky-up', 'slide-in' and 'flip'
+});</code></pre>
+
+    <p>Done!</p>
+
+
 </div>
 
 <div class="jDialog" id="dialog-1">
@@ -34,15 +80,85 @@
         </div>
     </div>
 </div>
+<div class="jDialog" id="dialog-2">
+    <div class="content">
+        <h3>Modal Dialog</h3>
+        <div>
+            <p>This is a modal window. You can do the following things with it:</p>
+            <ul>
+                <li><strong>Read:</strong> modal windows will probably tell you something important so don't forget
+                    to
+                    read what they say.
+                </li>
+                <li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and
+                    appreciate its presence.
+                </li>
+                <li><strong>Close:</strong> click on the button below to close the modal.</li>
+            </ul>
+            <button class="button" data-dismiss="JDialog" id="test">Close me!</button>
+        </div>
+    </div>
+</div>
+<div class="jDialog" id="dialog-3">
+    <div class="content">
+        <h3>Modal Dialog</h3>
+        <div>
+            <p>This is a modal window. You can do the following things with it:</p>
+            <ul>
+                <li><strong>Read:</strong> modal windows will probably tell you something important so don't forget
+                    to
+                    read what they say.
+                </li>
+                <li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and
+                    appreciate its presence.
+                </li>
+                <li><strong>Close:</strong> click on the button below to close the modal.</li>
+            </ul>
+            <button class="button" data-dismiss="JDialog" id="test">Close me!</button>
+        </div>
+    </div>
+</div>
+<div class="jDialog" id="dialog-4">
+    <div class="content">
+        <h3>Modal Dialog</h3>
+        <div>
+            <p>This is a modal window. You can do the following things with it:</p>
+            <ul>
+                <li><strong>Read:</strong> modal windows will probably tell you something important so don't forget
+                    to
+                    read what they say.
+                </li>
+                <li><strong>Look:</strong> a modal window enjoys a certain kind of attention; just look at it and
+                    appreciate its presence.
+                </li>
+                <li><strong>Close:</strong> click on the button below to close the modal.</li>
+            </ul>
+            <button class="button" data-dismiss="JDialog" id="test">Close me!</button>
+        </div>
+    </div>
+</div>
 
 <script src="//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
+<script src="site/rainbow-custom.min.js"></script>
 <script src="dist/jdialog.min.js"></script>
 <script>
-    $(".jDialog").jDialog({
+    $("#dialog-1").jDialog({
         skinClassName: 'demo',
         animationType: 'fade-in'
     });
-
+    $("#dialog-2").jDialog({
+        skinClassName: 'demo',
+        animationType: 'sticky-up'
+    });
+    $("#dialog-3").jDialog({
+        skinClassName: 'demo',
+        animationType: 'slide-in'
+    });
+    $("#dialog-4").jDialog({
+        skinClassName: 'demo',
+        animationType: 'flip',
+        allowOverlay: false
+    });
 </script>
 </body>
 </html>
